fix #24740449 contrast for toggles

--- a/src/SfxWeb/src/app/modules/tree/tree-view/tree-view.component.scss
+++ b/src/SfxWeb/src/app/modules/tree/tree-view/tree-view.component.scss
@@ -23,7 +23,6 @@
 }
 
 .tree-header {
-  color: var(--font-accent-color);
   position: sticky;
   padding: 10px;
 }
