--- a/src/SfxWeb/src/app/shared/component/toggle/toggle.component.scss
+++ b/src/SfxWeb/src/app/shared/component/toggle/toggle.component.scss
@@ -7,7 +7,7 @@ $border-radius: 50px;
     display: inline-block;
     width: 44px;
     height: 24px;
-    border: 2px solid #ccc;
+    border: 2px solid #919191;
     border-radius: $border-radius;
 
     &:focus-within {
@@ -30,7 +30,7 @@ $border-radius: 50px;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #919191;
     -webkit-transition: .25s;
     transition: .25s;
     border-radius: $border-radius;
